<resources>
    <string name="app_name">Adminibot</string>
    <string name="title_activity_register">REGISTRO</string>

    <!-- user register -->
    <string name="register_hint_name">Nombre</string>
    <string name="register_hint_last_name">Apellidos</string>
    <string name="register_hint_email">Email</string>
    <string name="register_button_ok">OK</string>

    <!-- login user -->
    <string name="login_hint_password">Pasword</string>
    <string name="login_button_enter">Entrar</string>
    <string name="login_register_now_link">¡Registrate ahora!</string>

    <!-- about -->
    <string name="about_description">Registra tus gastos diarios
    y obten un resumen periodico de los movimientos de tu capital. </string>

    <!-- error messages -->
    <string name="error_empty_value">El campo es requerido</string>
    <string name="error_wrong_format_email">El formato del email es incorrecto</string>
    <string name="error_wrong_length_email">El tamaño del email es incorrecto</string>
    <string name="error_wrong_lenght_name">El nombre es demasiado largo</string>
    <string name="error_wrong_lenght_last_name">El apellido es demasiado largo</string>
    <string name="error_wrong_lenght_password">El password es demasiado largo</string>
    <string name="error_wrong_format_name">El nombre debe contener solo letras</string>
    <string name="error_wrong_format_last_name">El apellido debe contener solo letras</string>
    <string name="error_wrong_lenght_concept">El concepto es demasiado largo</string>
    <string name="error_wrong_account">El número de cuenta es incorrecto</string>
    <string name="error_wrong_lenght_check_number">El número de cheque es numérico con un máximo de 18 digitos</string>
    <string name="error_wrong_lenght_issuance_code">La longitud del código de emisión es incorrecta</string>
    <string name="error_wrong_incorrect_amount">El monto debe estar compuesto de 10 enteros y 2 decimales como máximo</string>
    <string name="error_wrong_lenght_field">El campo es demasiado largo</string>
    <string name="error_wrong_only_numbers">El campo debe ser numerico</string>
    <string name="error_wrong_length_card_number">Se debe especificar 3 digitos de identificación para la tarjeta</string>
    <string name="error_wrong_brand_card">Debe seleccionar la marca de la tarjeta</string>
    <string name="error_wrong_bank">Debe seleccionar un banco</string>
    <string name="title_activity_home_activity">Adminibot!</string>

    <!-- navigation menu -->
    <string name="navigation_home_option">Bandeja de entrada</string>
    <string name="navigation_my_cards_option">Mis tarjetas</string>
    <string name="navigation_my_saving_option">Mis ahorros</string>
    <string name="navigation_accounts_option">Mis cuentas</string>
    <string name="navigation_summary_option">Resumen</string>
    <string name="navigation_title_header">Hola, yo soy <b>ADMINIBOT!</b></string>
    <string name="navigation_open_message">Open Navigation</string>
    <string name="navigation_close_message">Close Navigation</string>

    <!-- home fragment -->

    <!-- action bar menu -->
    <string name="action_bar_menu_notifications">Notificaciones</string>

    <!-- expenses types -->
    <string name="expenses_types_spinner_default_value">Selecciona el tipo de gasto</string>

    <string name="title_activity_expense_registration">Registro de gasto</string>

    <!-- expense registration -->
    <string name="expense_registration_hint_name">Nombre del gasto</string>
    <string name="expense_registration_hint_amount">Monto</string>
    <string name="expense_registration_button_register">Registrar</string>
    <string name="expense_registration_suggestion">Lleva el registro de cada uno de tus gastos realizados para que de esta
    manera tengas cifras mas precisas de tu capital :)</string>
    <string name="expense_registered_add">+  agregar método de pago</string>

    <!-- Inbox -->

    <string name="payment_methods_food_coupons_description">Vales de despensa, tarjetas o cupones</string>
    <string name="payment_methods_cash_description">Dinero en efectivo</string>
    <string name="payment_methods_cheque_description">Documento de pago</string>

    <!-- Card types -->
    <string name="title_activity_card_types">Escoge el tipo de tarjeta</string>

    <string name="title_activity_expenses_inbox">Gastos</string>

    <!-- messages -->

    <string name="choise_payment_method">Elige el método de pago</string>

    <!-- Add payment method -->
    <string name="no_payment_methods_registered">No hay formas de pago registradas :( agrega un
        ingreso o una tarjeta de credito para continuar.</string>
    <string name="add_payment_method">Agregar forma de pago</string>
    <string name="make_payment_with">Realizar gasto con: </string>

    <!-- add card -->
    <string name="add_card_banks_hint">Elige el banco</string>
    <string name="title_activity_add_card">Agrega una nueva tarjeta</string>
    <string name="success_insertion_cc">Se agregó la tarjeta correctamente</string>
    <string name="error_insertion_cc">Se produjo un error al agregar la tarjeta</string>

    <!-- add cash -->
    <string name="title_activity_add_cash">Agregar concepto de efectivo</string>
    <string name="success_insertion_cash">Se agregó el efectivo correctamente</string>
    <string name="error_insertion_cash">Se produjo un error al agregar el efectivo</string>

    <!-- add check -->
    <string name="title_activity_add_check">Agregar cheque</string>
    <string name="success_insertion_check">Se agregó el cheque correctamente</string>
    <string name="error_insertion_check">Se produjo un error al agregar el cheque</string>

    <!-- add food coupon -->
    <string name="title_activity_add_food_coupon">Agregar vale de despensa</string>
    <string name="success_insertion_food_coupon">Se agregó el cupon correctamente</string>
    <string name="error_insertion_food_coupon">Se produjo un error al agregar el cupon</string>

    <!-- banks -->
    <string name="banks_hint">Seleccione un banco</string>
    <string name="banks_bancomer">Bancomer</string>
    <string name="banks_banamex">Banamex</string>
    <string name="banks_banorte">Bancomer</string>
    <string name="banks_santander">Santander</string>
    <string name="banks_hsbc">HSBC</string>
    <string name="banks_wallmart">Wallmart</string>
    <string name="banks_scotiabank">Scotia bank</string>
    <string name="banks_amex">American Express</string>
    <string name="banks_bnk_azteca">Banco Azteca</string>
    <string name="banks_banregio">Banregio</string>
    <string name="banks_bancoopel">Bancoopel</string>
    <string name="banks_famsa">Banco ahorro famsa</string>

    <!-- My credit cards -->
    <string name="title_activity_my_credit_cards">Mis tarjeta de crédito</string>
    <string name="my_credit_cards_number_label">Número:</string>
    <string name="my_credit_cards_bank_label">Banco:</string>
    <string name="my_credit_cards_trademark_label">Marca:</string>
    <string name="my_credit_cards_available_credit">Crédito disponible:</string>
    <string name="my_credit_cards_credit_limit">Límite de crédito:</string>
    <string name="my_credit_cards_current_balance">Saldo actual:</string>
    <string name="my_credit_cards_cutoff_date">Fecha de corte:</string>
    <string name="my_credit_cards_payday_limit">Fecha límite de pago:</string>

    <!-- Credit card detail -->
    <string name="title_activity_credit_card_detail">Detalle de tarjeta</string>
    <string name="credit_card_detail_spend">Realizar gasto</string>

    <!-- Simple item -->
    <string name="simple_item_badge">$</string>

    <!-- My cash-->
    <string name="title_my_cash_activity">Mi efectivo</string>
    <string name="total_label__my_cash_activity">Total: </string>

    <!-- My food coupons-->
    <string name="title_my_food_coupons_activity">Mis vales de despensa</string>

    <!-- action bar -->
    <string name="add_more_payment_method">Agregar</string>

    <!-- * Welcome -->
    <string name="title_welcome">Selecciona una opción</string>
    <string name="title_option_1">Ingreso</string>
    <string name="msg_description_1">Registra uno o varios metodos de pago.</string>
    <string name="title_option_2">Tarjeta de crédito</string>
    <string name="msg_description_2">Registra una tarjeta de crédito.</string>
    <string name="title_option_3">Ahorros</string>
    <string name="msg_description_3">Registra tus ahorros.</string>

    <!-- * Payment methods income concept dialog -->
    <string name="title_concept_of_income">Concepto del ingreso *</string>
    <string name="error_concept_of_income">El concepto es obligatorio</string>

    <!-- * Dialog buttons -->
    <string name="msg_accept">Aceptar</string>
    <string name="msg_cancel">Cancelar</string>

    <!-- * Cash dialog -->
    <string name="title_cash_amount">Monto en efectivo *</string>
    <string name="error_amount">El monto no puede estar vacío</string>

    <!-- * Food coupon dialog -->
    <string name="title_food_coupon_amount">Monto de vales o cupones de despensa *</string>

    <!-- * Payment methods activity -->
    <string name="title_payment_methods">Metodos de pago</string>
    <string name="title_alert_empty_payment_methods">¡Hey!</string>
    <string name="msg_alert_empty_payment_methods">Agrega algun método de pago para continuar.</string>
    <string name="msg_action_bar_edit_action">Editar</string>

    <!-- * payment methods types -->
    <string name="msg_food_coupons">Vales de despensa</string>
    <string name="msg_cash">Efectivo</string>
    <string name="msg_credit_card">Tarjeta de crédito</string>
    <string name="msg_debit_card">Tarjeta de débito</string>

    <!-- * debit card -->
    <string name="title_debit_card">Nueva tarjeta de débito</string>
    <string name="msg_debit_card_name">Nombre de la tarjeta *</string>
    <string name="msg_debit_card_number">Número *</string>
    <string name="msg_debit_card_amount">Monto *</string>
    <string name="msg_debit_card_valid_thru">Valida hasta</string>
    <string name="msg_debit_card_button">Agregar</string>
    <string-array name="banks_array">
        <item>Banamex</item>
        <item>Bancomer</item>
        <item>Santander</item>
        <item>HSBC</item>
        <item>Wallmart</item>
        <item>Scotia bank</item>
        <item>American Express</item>
    </string-array>
    <string name="msg_error_empty_name">El nombre de la tarjeta es requerido</string>
    <string name="msg_error_empty_card_number">El número de tarjeta es requerido</string>
    <string name="msg_error_empty_card_amount">El monto es requerido</string>

    <!-- * total income dialog -->
    <string name="msg_total_amount_cash">$%1$s</string>
    <string name="msg_total_amount_food_coupons">$%1$s</string>
    <string name="msg_total_amount_debit_cards">$%1$s</string>
    <string name="msg_total_income">$%1$s</string>

    <!-- * empty title -->
    <string name="title_empty">Editar movimientos</string>


</resources>
