<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_debit_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.dojogeek.adminibot.views.DebitCardActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_debit_card_name"
                android:inputType="textCapWords"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_banks"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_debit_card_number"
                android:inputType="number"
                android:maxLength="16"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_card_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_card_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_debit_card_amount"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_debit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/general_button_custom"
            android:text="@string/msg_debit_card_button"
            android:textColor="#ffff"/>

    </LinearLayout>

</LinearLayout>
