<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="io.dojogeek.adminibot.views.RegisterExpenseActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="16dp"
            android:background="@color/global_background_dark"
            android:textColor="@color/primary_background"
            android:drawableLeft="@drawable/ic_suggestion"
            android:drawablePadding="15dp"
            android:textStyle="italic"
            android:text="@string/expense_registration_suggestion"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/expense_name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:hint="@string/expense_registration_hint_name" />

            <io.dojogeek.adminibot.components.CustomSpinner
                android:id="@+id/expenses_types"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@+id/expense_name" />

            <io.dojogeek.adminibot.components.PaymentMethod
                android:id="@+id/payment_method_component"
                android:layout_below="@+id/expenses_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/expense_ok"
                android:layout_below="@+id/payment_method_component"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/expense_registration_button_register"
                android:textSize="24sp"
                android:textColor="@color/primary_background"
                android:background="@drawable/rounded_button_selector"
                android:stateListAnimator="@null"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>

